--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteRule ^cover/?$ root/default.php [nc]
+RewriteRule ^(cover/)?$ root/default.php [nc]
 RewriteRule ^edit/(([a-z]+)/)?$ root/edit.php?screen=$2 [nc]
 RewriteRule ^delete/([0-9]+)/$ root/delete.php?fid=$1 [nc]
 RewriteRule ^ajax/(exe|prov)/$ root/ajax_$1.php [nc]
